Fix bg mask color (for when sidebar is open on mobile.

--- a/assets/css/_dark/dark-main.scss
+++ b/assets/css/_dark/dark-main.scss
@@ -16,7 +16,7 @@
     --input-focus-border: rgb(112, 114, 115);
     --footer-bg: rgb(0, 0, 1);
     --footer-border: rgb(0, 0, 1);
-    --mask-bg: rgb(68, 69, 70);
+    --mask-bg: rgb(0, 0, 1);
 
     /* sidebar */
     --nav-cursor: rgb(183, 182, 182);
